스크린리더 only css 적용

--- a/css/login.css
+++ b/css/login.css
@@ -10,3 +10,12 @@ html {
   font-family: "SpoqaHanSansNeo-Regular";
   font-size: 10px;
 }
+
+.sr-only {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
