--- a/css/login.css
+++ b/css/login.css
@@ -19,3 +19,12 @@ html {
   height: 1px;
   overflow: hidden;
 }
+
+body {
+  font-size: 1.6rem;
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 7rem;
+}
