--- a/css/login.css
+++ b/css/login.css
@@ -76,6 +76,14 @@ section form {
   border-radius: 1rem;
 }
 
+section form input {
+  width: 100%;
+  height: 6rem;
+  font-size: inherit;
+  border: none;
+  border-bottom: var(--border-color) solid 0.1rem;
+}
+
 section form button {
   margin-top: 3rem;
   width: 48rem;
