--- a/css/login.css
+++ b/css/login.css
@@ -34,18 +34,19 @@ body {
   margin-top: 10rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 7rem;
 }
 /* header */
 h1 {
   width: 23.8rem;
   height: 7.4rem;
+  margin: auto;
 }
 
 /* main */
 article {
-  position: relative;
+  max-width: 55rem;
+  margin: auto;
 }
 
 article ul {
@@ -77,7 +78,6 @@ section form {
 }
 
 section form input {
-  width: 100%;
   height: 6rem;
   font-size: inherit;
   border: none;
@@ -86,7 +86,6 @@ section form input {
 
 section form button {
   margin-top: 3rem;
-  width: 48rem;
   height: 6rem;
   line-height: 2.2rem;
   background-color: var(--point-color);
