로그인 에러시 클래스 적용으로 수정

--- a/css/login.css
+++ b/css/login.css
@@ -95,6 +95,11 @@ section form button {
   font-weight: 700;
 }
 
+.login-error {
+  margin: 2rem 0 -1rem 0;
+  color: #eb5757;
+}
+
 .find {
   margin-top: 3rem;
 }
