--- a/css/login.css
+++ b/css/login.css
@@ -48,20 +48,24 @@ article {
   max-width: 55rem;
   margin: auto;
 }
-
+/* ------main 태그 공통------ */
 article ul {
   display: flex;
   justify-content: center;
 }
-
 button {
   font-size: 1.8rem;
   line-height: 2.2rem;
   cursor: pointer;
 }
-/* 버튼 위치 조정 및 색상 구분 */
+/* -------------------------- */
+
+.login-btns li {
+  width: 100%;
+}
+
 .login-btns li button {
-  width: 27.5rem;
+  width: 100%;
   height: 8rem;
   border: var(--border-color) 0.1rem solid;
   background-color: var(--main-color);
@@ -69,7 +73,16 @@ button {
   font-weight: 500;
 }
 
+.login-btns li .seller {
+  background-color: #f2f2f2;
+}
+
 section form {
+  /*.login-btns 와 위치 조정 */
+  position: relative;
+  top: -1rem;
+  background-color: var(--main-color);
+
   display: flex;
   flex-direction: column;
   gap: 0.6rem;
@@ -96,13 +109,8 @@ section form button {
   font-weight: 700;
 }
 
-.login-error {
-  margin: 2rem 0 -1rem 0;
-  color: #eb5757;
-}
-
 .find {
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 .find li a {
@@ -115,4 +123,10 @@ section form button {
   content: "|";
   display: inline;
   margin: 0 1.4rem;
+}
+
+/* 로그인 오류시 적용되는 css */
+.login-error {
+  margin: 2rem 0 -1rem 0;
+  color: #eb5757;
 }
