--- a/css/login.css
+++ b/css/login.css
@@ -58,6 +58,7 @@ button {
   line-height: 2.2rem;
   cursor: pointer;
 }
+
 /* -------------------------- */
 
 .login-btns li {
@@ -77,7 +78,7 @@ button {
   background-color: var(--main-color);
 }
 
-section form {
+.login-form {
   /*.login-btns 와 위치 조정 */
   position: relative;
   top: -1rem;
@@ -91,14 +92,20 @@ section form {
   border-radius: 1rem;
 }
 
-section form input {
+.login-form input {
   height: 6rem;
   font-size: inherit;
   border: none;
   border-bottom: var(--border-color) solid 0.1rem;
 }
 
-section form button {
+/* active인데 focus로 적용 */
+.login-form input:focus {
+  outline: none;
+  border-bottom: var(--point-color) solid 0.1rem;
+}
+
+.login-form button {
   margin-top: 3rem;
   height: 6rem;
   line-height: 2.2rem;
