비밀번호 input 내 이미지 적용

--- a/css/signup.css
+++ b/css/signup.css
@@ -139,6 +139,15 @@ select:focus {
   margin-bottom: 3rem;
 }
 
+/* input 내 이미지 추가 */
+#password,
+#password-recheck {
+  background-image: url(../assets/icon-check-off.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-x: 43.6rem;
+}
+
 .id-wrap,
 .businessnum-wrap,
 .phone-wrap {
