--- a/css/login.css
+++ b/css/login.css
@@ -65,7 +65,7 @@ button {
   width: 100%;
 }
 
-.login-btns li button {
+.login-btns button {
   width: 100%;
   height: 8rem;
   border: var(--border-color) 0.1rem solid;
@@ -74,8 +74,11 @@ button {
   font-weight: 500;
 }
 
-.login-btns li .active {
+.login-btns .active {
   background-color: var(--main-color);
+  position: relative;
+  z-index: 100;
+  border-bottom: none;
 }
 
 .login-form {
@@ -136,4 +139,14 @@ button {
 .login-error {
   margin: 2rem 0 -1rem 0;
   color: #eb5757;
+}
+/* 로그인 구매회원, 판매회원 클릭시 적용 css */
+.login-btns .buyer {
+  border-right: none;
+  border-left: var(--border-color) 0.1rem solid;
+}
+
+.login-btns .seller {
+  border-left: none;
+  border-right: var(--border-color) 0.1rem solid;
 }
