--- a/css/login.css
+++ b/css/login.css
@@ -1,32 +1,4 @@
-@font-face {
-  font-family: "SpoqaHanSansNeo-Regular";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
-:root {
-  --main-color: #ffffff;
-  --border-color: #c4c4c4;
-  --point-color: #21bf48;
-}
-
-html {
-  font-size: 10px;
-}
-* {
-  font-family: "SpoqaHanSansNeo-Regular";
-}
-
-.sr-only {
-  position: absolute;
-  left: -9999px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-}
+@import url(./common.css);
 
 body {
   font-size: 1.6rem;
