--- a/css/signup.css
+++ b/css/signup.css
@@ -1,34 +1,4 @@
-@font-face {
-  font-family: "SpoqaHanSansNeo-Regular";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
-:root {
-  --main-color: #ffffff;
-  --border-color: #c4c4c4;
-  --point-color: #21bf48;
-  --font-color: #767676;
-  --error-color: #eb5757;
-}
-
-html {
-  font-size: 10px;
-}
-* {
-  font-family: "SpoqaHanSansNeo-Regular";
-}
-
-.sr-only {
-  position: absolute;
-  left: -9999px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-}
+@import url(./common.css);
 
 /* .seller-only : 사업자등록번호, 스토어 이름 input 요소 포함 */
 .seller-only {
