--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,12 @@
+body {
+  font-size: 1.6rem;
+  line-height: 2.003rem;
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+}
+
 /* header */
 h1 {
   width: 23.8rem;
