--- a/css/signup.css
+++ b/css/signup.css
@@ -1,3 +1,12 @@
+body {
+  font-size: 1.6rem;
+  line-height: 2.003rem;
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+}
+
 /* .seller-only : 사업자등록번호, 스토어 이름 input 요소 포함 */
 .seller-only {
   display: none;
