--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,86 @@
 body {
+  max-width: 192rem;
+  margin: auto;
+
   font-size: 1.6rem;
   line-height: 2.003rem;
   display: flex;
   flex-direction: column;
 }
 
+/* 공통속성 */
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 /* header */
+header {
+  height: 9rem;
+  padding: 2.6rem 32rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 32rem;
+  box-sizing: border-box;
+
+  position: sticky;
+  top: 0;
+  background-color: var(--main-color);
+  box-shadow: 0 0.4rem 0.5rem 0 #0000001a;
+}
+
+.search-wrap {
+  display: flex;
+  gap: 3rem;
+}
+
+h1 img {
+  width: 12.4rem;
+  height: 3.8rem;
+  /* 로고 위치 조정 */
+  transform: translateY(0.7rem);
+}
+
+/* 검색창 버튼 위치 */
+form {
+  position: relative;
+}
+
+#search {
+  width: 40rem;
+  height: 4.6rem;
+  border-radius: 5rem;
+  border: var(--point-color) 0.2rem solid;
+  outline: none;
+  text-indent: 2.2rem;
+}
+
+.searchBtn {
+  position: absolute;
+  right: 2.2rem;
+  top: 1.1rem;
+  border: none;
+  background-color: var(--main-color);
+  cursor: pointer;
+}
+
+.btn-wrap ul {
+  display: flex;
+  gap: 4.7rem;
+}
+.btn-wrap a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+  color: var(--font-color);
+}
+
+/* main */
+main {
+  margin: auto;
+}
