--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ header {
 
   position: sticky;
   top: 0;
+  z-index: 100;
   background-color: var(--main-color);
   box-shadow: 0 0.4rem 0.5rem 0 #0000001a;
 }
