--- a/css/main.css
+++ b/css/main.css
@@ -193,3 +193,21 @@ address {
 address span {
   font-weight: 700;
 }
+
+/* 판매자센터 버튼 */
+.sellerCenter button {
+  width: 16.8rem;
+  height: 5.4rem;
+  font-size: 1.8rem;
+  line-height: 2.254rem;
+
+  border-radius: 0.5rem;
+  display: flex;
+  gap: 0.8rem;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--main-color);
+  border: none;
+  background-color: var(--point-color);
+}
