🎨 셀렉트박스 커스텀 : 버튼 클릭시 버튼 화살표 변경

--- a/css/signup.css
+++ b/css/signup.css
@@ -158,7 +158,11 @@ select {
   background: url("../assets/icon-down-arrow.svg") no-repeat 95% 50%;
 }
 
-/* select:: {
+.selected {
+  background-image: url("../assets/icon-up-arrow.svg");
+}
+
+/* option {
   background-color: #e0e0e0;
 } */
 
