--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,8 @@ form {
   display: flex;
   gap: 4.7rem;
 }
-.btn-wrap a {
+.cartBtn,
+.loginBtn {
   min-width: 6rem;
   display: flex;
   flex-direction: column;
