--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ a {
 header {
   height: 9rem;
   padding: 2.6rem 32rem;
+  max-width: 192rem;
 
   display: flex;
   align-items: center;
@@ -73,7 +74,8 @@ form {
   gap: 4.7rem;
 }
 .cartBtn,
-.loginBtn {
+.loginBtn,
+.myPageBtn {
   min-width: 6rem;
   display: flex;
   flex-direction: column;
@@ -212,4 +214,65 @@ address span {
   color: var(--main-color);
   border: none;
   background-color: var(--point-color);
+}
+
+/* 마이페이지 버튼 모달 */
+
+/* 마이페이지로 position 고정 */
+.myPageBtn {
+  position: relative;
+}
+
+.myPageModal {
+  position: absolute;
+  top: 6rem;
+  left: -3rem;
+  z-index: 200;
+
+  width: 13rem;
+  height: 11.8rem;
+  box-sizing: border-box;
+  padding: 1rem;
+
+  border: none;
+  border-radius: 1rem;
+  box-shadow: 0 0 0.6rem 0 rgba(0, 0, 0, 25%);
+}
+
+.myPageModal button {
+  width: 11rem;
+  height: 4rem;
+  margin-bottom: 0.8rem;
+
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--main-color);
+  color: var(--font-color);
+  cursor: pointer;
+}
+
+.myPageModal button:hover {
+  border: var(--font-color) solid 0.1rem;
+  color: #000;
+}
+
+/* 모달창 삼각형 추후 구현 */
+.myPageModal::before {
+  /* content: "";
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  top: -1.4rem;
+  left: 4.7rem;
+  background-color: red;
+  position: absolute;
+  z-index: 100; */
+
+  /* border-radius: 100rem 100rem 0.4rem 0.4rem; */
+
+  /* width: 0;
+  height: 0;
+  border-bottom: 2.5rem solid skyblue;
+  border-left: 1.5rem solid transparent;
+  border-right: 1.5rem solid transparent; */
 }
