--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,9 @@ form {
   font-size: 1.2rem;
   line-height: 1.4rem;
   color: var(--font-color);
+  text-decoration: none;
+  background: none;
+  border: none;
   cursor: pointer;
 }
 
@@ -219,7 +222,7 @@ address span {
 /* 마이페이지 버튼 모달 */
 
 /* 마이페이지로 position 고정 */
-.myPageBtn {
+.myPage {
   position: relative;
 }
 
