--- a/css/goods.css
+++ b/css/goods.css
@@ -353,3 +353,43 @@ dialog p {
 .disabled {
   background-color: var(--border-color);
 }
+
+/* 마이페이지 버튼 모달 */
+
+/* 마이페이지로 position 고정 */
+.myPage {
+  position: relative;
+}
+
+.myPageModal {
+  position: absolute;
+  top: 6rem;
+  left: -3rem;
+  z-index: 200;
+
+  width: 13rem;
+  height: 11.8rem;
+  box-sizing: border-box;
+  padding: 1rem;
+
+  border: none;
+  border-radius: 1rem;
+  box-shadow: 0 0 0.6rem 0 rgba(0, 0, 0, 25%);
+}
+
+.myPageModal button {
+  width: 11rem;
+  height: 4rem;
+  margin-bottom: 0.8rem;
+
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--main-color);
+  color: var(--font-color);
+  cursor: pointer;
+}
+
+.myPageModal button:hover {
+  border: var(--font-color) solid 0.1rem;
+  color: #000;
+}
