🎨 상품 상세 페이지 로그인 UI 적용

--- a/css/goods.css
+++ b/css/goods.css
@@ -68,7 +68,8 @@ form {
   gap: 4.7rem;
 }
 .cartBtn,
-.myPageBtn {
+.myPageBtn,
+.loginBtn {
   min-width: 6rem;
   display: flex;
   flex-direction: column;
