--- a/css/signup.css
+++ b/css/signup.css
@@ -116,14 +116,14 @@ select:focus {
 
 /* input 내 이미지 추가 */
 
-.invalid-password {
+.invalid-passwordImg {
   background-image: url(../assets/icon-check-off.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-position-x: 43.6rem;
 }
 
-.valid-password {
+.valid-passwordImg {
   background-image: url(../assets/icon-check-on.svg);
   background-repeat: no-repeat;
   background-position: center;
