🎨 판매자 센터 버튼 커서 포인터 추가

--- a/css/goods.css
+++ b/css/goods.css
@@ -352,6 +352,7 @@ dialog p {
   color: var(--main-color);
   border: none;
   background-color: var(--point-color);
+  cursor: pointer;
 }
 
 /* 판매자에게 disabled로 보이는 버튼 */
