--- a/css/goods.css
+++ b/css/goods.css
@@ -248,6 +248,10 @@ input:disabled {
   border: none;
   color: var(--main-color);
   cursor: pointer;
+
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.2rem;
 }
 
 .buyBtns button:first-of-type {
