--- a/css/goods.css
+++ b/css/goods.css
@@ -11,7 +11,7 @@ body {
 /* header */
 header {
   height: 9rem;
-  padding: 2.6rem 32rem;
+  padding: 2rem 32rem;
 
   display: flex;
   align-items: center;
@@ -74,6 +74,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.4rem;
 
   font-size: 1.2rem;
   line-height: 1.4rem;
@@ -82,6 +83,38 @@ form {
   background: none;
   border: none;
   cursor: pointer;
+}
+
+/* 장바구니, 로그인, 마이페이지 버튼 hover시 이미지 변경 추가 */
+.cartBtn::before,
+.loginBtn::before,
+.myPageBtn::before {
+  content: "";
+  display: inline-block;
+  width: 3.2rem;
+  height: 3.2rem;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.cartBtn::before {
+  background-image: url(../assets/icon-shopping-cart.svg);
+  left: -0.25rem;
+}
+
+.cartBtn:hover::before {
+  background-image: url(../assets/icon-shopping-cart-2.svg);
+}
+
+.loginBtn::before,
+.myPageBtn::before {
+  background-image: url(../assets/icon-user.svg);
+}
+
+.loginBtn:hover::before,
+.myPageBtn:hover::before {
+  background-image: url(../assets/icon-user-2.svg);
 }
 
 /* main */
