--- a/css/signup.css
+++ b/css/signup.css
@@ -105,7 +105,7 @@ select:focus {
   font-weight: 700;
 }
 
-.password-checkMsg {
+.passwordCheckMsg {
   margin: 1.5rem 0;
 }
 
@@ -225,17 +225,20 @@ button:disabled {
 /* ------------------------------- */
 
 /* 회원가입 오류시 적용되는 css */
+
+/* Msg 값 컬러 적용 */
 .invalidColor {
   color: var(--error-color);
 }
 
-.validColor {
-  color: var(--point-color);
-}
-
-/* input태그 내 값이 유효하지 않을 때 border색상 적용 */
+/* input border색상 적용 */
 input:user-invalid {
   border-color: var(--error-color);
+}
+
+/* 값이 유효할 때 Msg 컬러 적용 */
+.validColor {
+  color: var(--point-color);
 }
 
 /* 회원가입 구매회원, 판매회원 클릭시 적용 css */
