🎨 리드미 이미지 추가 및 상세페이지 footer 적용

--- a/css/common.css
+++ b/css/common.css
@@ -23,6 +23,12 @@ a {
   font-family: "SpoqaHanSansNeo-Regular";
 }
 
+/* 공통속성 */
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 .sr-only {
   position: absolute;
   left: -9999px;
