--- a/css/main.css
+++ b/css/main.css
@@ -297,23 +297,16 @@ address span {
   color: #000;
 }
 
-/* 모달창 삼각형 추후 구현 */
 .myPageModal::before {
-  /* content: "";
-  display: inline-block;
-  width: 3rem;
-  height: 3rem;
-  top: -1.4rem;
-  left: 4.7rem;
-  background-color: red;
+  content: "";
   position: absolute;
-  z-index: 100; */
+  top: -0.7rem;
+  left: 50%;
+  transform: translateX(-50%);
 
-  /* border-radius: 100rem 100rem 0.4rem 0.4rem; */
+  border-left: 0.8rem solid transparent;
+  border-right: 0.8rem solid transparent;
+  border-bottom: 0.8rem solid var(--main-color);
 
-  /* width: 0;
-  height: 0;
-  border-bottom: 2.5rem solid skyblue;
-  border-left: 1.5rem solid transparent;
-  border-right: 1.5rem solid transparent; */
+  filter: drop-shadow(0 -0.2rem 0.2rem rgba(0, 0, 0, 0.1));
 }
