--- a/css/signup.css
+++ b/css/signup.css
@@ -1,5 +1,3 @@
-/* select box 커스텀해야함 */
-
 body {
   font-size: 1.6rem;
   line-height: 2.003rem;
@@ -22,10 +20,6 @@ article {
   margin: auto;
 }
 /* ------main 태그 공통------ */
-article ul {
-  display: flex;
-  justify-content: space-evenly;
-}
 button {
   font-size: 1.8rem;
   line-height: 2.2rem;
@@ -39,6 +33,11 @@ button {
 }
 
 /* main */
+
+.join-btns {
+  display: flex;
+  justify-content: space-evenly;
+}
 
 .join-btns li {
   width: 100%;
@@ -78,8 +77,7 @@ button {
   gap: 1rem;
 }
 
-.join-form input,
-.phone-wrap select {
+.join-form input {
   max-width: 100%;
   height: 5.4rem;
   font-size: inherit;
@@ -89,8 +87,7 @@ button {
   text-indent: 1.6rem;
 }
 
-input:focus,
-select:focus {
+input:focus {
   outline: none;
   border-color: var(--point-color);
 }
@@ -138,28 +135,82 @@ select:focus {
   max-width: 15rem;
 }
 
-.phone-wrap select,
 .phone-wrap input {
   text-indent: 0;
   text-align: center;
 }
 
-/* 셀렉트박스 수정 */
-select {
-  /* 셀렉트 박스 기본 디자인 제거 */
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  background: url("../assets/icon-down-arrow.svg") no-repeat 95% 50%;
+/* ------- 셀렉트박스 커스텀 --------- */
+
+.phone-wrap {
+  /* option 버튼 리스트 위치 고정 */
+  position: relative;
 }
 
-.selected {
+/* 셀렉트 버튼 */
+.phone-wrap .selectBtn {
+  width: 15.4rem;
+  height: 5.8rem;
+  font-size: inherit;
+  border: var(--border-color) 0.1rem solid;
+  border-radius: 0.5rem;
+  background: url("../assets/icon-down-arrow.svg") no-repeat 95% 50%;
+  color: #000;
+}
+
+.phone-wrap .selectBtn:focus {
+  outline: none;
+  border-color: var(--point-color);
+}
+
+.phone-wrap .selected {
   background-image: url("../assets/icon-up-arrow.svg");
 }
 
-/* option {
+/* 옵션 리스트 */
+.optionList {
+  display: none;
+  width: 15.2rem;
+  max-height: 15rem;
+  overflow: auto;
+  position: absolute;
+  top: 6.5rem;
+
+  text-align: center;
+  background: #fff;
+  z-index: 100;
+  border: 0.1rem solid var(--border-color);
+  border-radius: 0.5rem;
+}
+
+/* 옵션 버튼 */
+.optionList button {
+  width: 100%;
+  height: 4rem;
+  padding: 0;
+  font-size: 1.6rem;
+  background-color: var(--main-color);
+  /* border: var(--border-color) 0.1rem solid; */
+  color: #000;
+}
+
+.optionList button:hover {
   background-color: #e0e0e0;
-} */
+}
+
+.optionList::-webkit-scrollbar {
+  width: 1.8rem;
+}
+
+.optionList::-webkit-scrollbar-thumb {
+  background: var(--border-color);
+  border-radius: 1rem;
+  border: 6px solid #f2f2f2;
+}
+
+.optionList::-webkit-scrollbar-track {
+  background-color: #f2f2f2;
+}
 
 /* ------------------------------- */
 
