--- a/css/signup.css
+++ b/css/signup.css
@@ -237,7 +237,8 @@ section {
   position: relative;
   left: 2.6rem;
 }
-.checkbox span {
+.checkbox a {
+  color: currentColor;
   text-decoration: underline;
   font-weight: 700;
 }
