💄 회원가입 내 반응형 input css 수정

--- a/css/signup.css
+++ b/css/signup.css
@@ -72,7 +72,6 @@ button {
 
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -131,10 +130,8 @@ input:focus {
 }
 
 .phone-wrap input {
+  width: 100%;
   max-width: 15rem;
-}
-
-.phone-wrap input {
   text-indent: 0;
   text-align: center;
 }
