🐛 모바일 화면에서 비밀번호 확인 아이콘 안보이는 버그 수정

--- a/css/signup.css
+++ b/css/signup.css
@@ -109,15 +109,13 @@ input:focus {
 .invalid-passwordImg {
   background-image: url(../assets/icon-check-off.svg);
   background-repeat: no-repeat;
-  background-position: center;
-  background-position-x: 43.6rem;
+  background-position: center right 1rem;
 }
 
 .valid-passwordImg {
   background-image: url(../assets/icon-check-on.svg);
   background-repeat: no-repeat;
-  background-position: center;
-  background-position-x: 43.6rem;
+  background-position: center right 1rem;
 }
 
 .id-wrap,
