--- a/css/signup.css
+++ b/css/signup.css
@@ -7,19 +7,17 @@ body {
   gap: 7rem;
 }
 
-/* header */
 h1 {
   width: 23.8rem;
   height: 7.4rem;
   margin: auto;
 }
 
-/* main */
 article {
   max-width: 55rem;
   margin: auto;
 }
-/* ------main 태그 공통------ */
+
 button {
   font-size: 1.8rem;
   line-height: 2.2rem;
@@ -32,34 +30,27 @@ button {
   line-height: inherit;
 }
 
-/* main */
-
 .join-btns {
   display: flex;
   justify-content: space-evenly;
+  li {
+    width: 100%;
+    button {
+      width: 100%;
+      height: 8rem;
+      border: var(--input-border);
+      background-color: #f2f2f2;
+      border-radius: 1rem;
+      font-weight: 500;
+    }
+    .active {
+      background-color: var(--main-color);
+      position: relative;
+      z-index: 100;
+      border-bottom: none;
+    }
+  }
 }
-
-.join-btns li {
-  width: 100%;
-}
-
-.join-btns li button {
-  width: 100%;
-  height: 8rem;
-  border: var(--input-border);
-  background-color: #f2f2f2;
-  border-radius: 1rem;
-  font-weight: 500;
-}
-
-.join-btns li .active {
-  background-color: var(--main-color);
-  position: relative;
-  z-index: 100;
-  border-bottom: none;
-}
-
-/* form */
 
 .join-form {
   position: relative;
@@ -73,16 +64,26 @@ button {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
 
-.join-form input {
-  max-width: 100%;
-  height: 5.4rem;
-  font-size: inherit;
-  border: var(--input-border);
-  border-radius: 0.5rem;
-  flex-grow: 2;
-  text-indent: 1.6rem;
+  input {
+    max-width: 100%;
+    height: 5.4rem;
+    font-size: inherit;
+    border: var(--input-border);
+    border-radius: 0.5rem;
+    flex-grow: 2;
+    text-indent: 1.6rem;
+  }
+
+  button {
+    height: 5.4rem;
+    line-height: 2.2rem;
+    background-color: var(--point-color);
+    border-radius: 0.5rem;
+    color: var(--main-color);
+    border: none;
+    font-weight: 700;
+  }
 }
 
 input:focus {
@@ -90,21 +91,9 @@ input:focus {
   border-color: var(--point-color);
 }
 
-.join-form button {
-  height: 5.4rem;
-  line-height: 2.2rem;
-  background-color: var(--point-color);
-  border-radius: 0.5rem;
-  color: var(--main-color);
-  border: none;
-  font-weight: 700;
-}
-
 .passwordCheckMsg {
   margin: 1.5rem 0;
 }
-
-/* input 내 이미지 추가 */
 
 .invalid-passwordImg {
   background-image: url(../assets/icon-check-off.svg);
@@ -134,34 +123,30 @@ input:focus {
   text-align: center;
 }
 
-/* ------- 셀렉트박스 커스텀 --------- */
-
+/* Phone Select Box */
 .phone-wrap {
-  /* option 버튼 리스트 위치 고정 */
   position: relative;
+
+  .selectBtn {
+    width: 15.4rem;
+    height: 5.8rem;
+    font-size: inherit;
+    border: var(--input-border);
+    border-radius: 0.5rem;
+    background: url("../assets/icon-down-arrow.svg") no-repeat 95% 50%;
+    color: #000;
+  }
+
+  .selectBtn:focus {
+    outline: none;
+    border-color: var(--point-color);
+  }
+
+  .selected {
+    background-image: url("../assets/icon-up-arrow.svg");
+  }
 }
 
-/* 셀렉트 버튼 */
-.phone-wrap .selectBtn {
-  width: 15.4rem;
-  height: 5.8rem;
-  font-size: inherit;
-  border: var(--input-border);
-  border-radius: 0.5rem;
-  background: url("../assets/icon-down-arrow.svg") no-repeat 95% 50%;
-  color: #000;
-}
-
-.phone-wrap .selectBtn:focus {
-  outline: none;
-  border-color: var(--point-color);
-}
-
-.phone-wrap .selected {
-  background-image: url("../assets/icon-up-arrow.svg");
-}
-
-/* 옵션 리스트 */
 .optionList {
   display: none;
   width: 15.2rem;
@@ -175,20 +160,19 @@ input:focus {
   z-index: 100;
   border: 0.1rem solid var(--border-color);
   border-radius: 0.5rem;
-}
 
-/* 옵션 버튼 */
-.optionList button {
-  width: 100%;
-  height: 4rem;
-  padding: 0;
-  font-size: 1.6rem;
-  background-color: var(--main-color);
-  color: #000;
-}
+  button {
+    width: 100%;
+    height: 4rem;
+    padding: 0;
+    font-size: 1.6rem;
+    background-color: var(--main-color);
+    color: #000;
+  }
 
-.optionList button:hover {
-  background-color: #e0e0e0;
+  button:hover {
+    background-color: #e0e0e0;
+  }
 }
 
 .optionList::-webkit-scrollbar {
@@ -205,7 +189,6 @@ input:focus {
   background-color: #f2f2f2;
 }
 
-/* 이용약관 동의 및 가입하기 */
 section {
   position: relative;
 }
@@ -217,8 +200,7 @@ section {
   display: flex;
 }
 
-/* checkbox 가상요소 스타일 적용 */
-/* 기본 체크박스 스타일 삭제 */
+/* 기본 checkbox 제거 */
 .txt-hide {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -231,14 +213,14 @@ section {
 .checkbox {
   position: relative;
   left: 2.6rem;
-}
-.checkbox a {
-  color: currentColor;
-  text-decoration: underline;
-  font-weight: 700;
+
+  a {
+    color: currentColor;
+    text-decoration: underline;
+    font-weight: 700;
+  }
 }
 
-/* 체크 안했을 때 */
 .checkbox::before {
   content: "";
   display: inline-block;
@@ -250,7 +232,6 @@ section {
   background-image: url(../assets/check-box.svg);
 }
 
-/* 체크 했을 때 */
 #checkbox:checked + .checkbox::before {
   background-image: url(../assets/check-fill-box.svg);
 }
@@ -265,26 +246,21 @@ button:disabled {
   background-color: var(--border-color);
   cursor: not-allowed;
 }
-/* ------------------------------- */
 
-/* 회원가입 오류시 적용되는 css */
-
-/* Msg 값 컬러 적용 */
-.invalidColor {
-  color: var(--error-color);
-}
-
-/* input border색상 적용 */
-input:user-invalid {
-  border-color: var(--error-color);
-}
-
-/* 값이 유효할 때 Msg 컬러 적용 */
+/* valid */
 .validColor {
   color: var(--point-color);
 }
 
-/* 회원가입 구매회원, 판매회원 클릭시 적용 css */
+/* invalid */
+.invalidColor {
+  color: var(--error-color);
+}
+input:user-invalid {
+  border-color: var(--error-color);
+}
+
+/* account type select button : border css */
 .join-btns .buyer {
   border-right: none;
   border-left: var(--input-border);
