--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,20 @@
 body {
   max-width: 192rem;
   margin: auto;
-
   font-size: 1.6rem;
   line-height: 2.003rem;
   display: flex;
   flex-direction: column;
 }
 
-/* header */
 header {
   height: 9rem;
   padding: 2rem 32rem;
   max-width: 192rem;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-
   position: sticky;
   top: 0;
   z-index: 100;
@@ -34,7 +30,6 @@ header {
 h1 img {
   width: 12.4rem;
   height: 3.8rem;
-  /* 로고 위치 조정 */
   transform: translateY(0.7rem);
 }
 
@@ -49,7 +44,6 @@ form {
   height: 4.6rem;
   border-radius: 5rem;
   border: var(--point-color) 0.2rem solid;
-  /* focus 되었을때 border 미적용 */
   outline: none;
   text-indent: 2.2rem;
 }
@@ -118,19 +112,13 @@ form {
   background-image: url(../assets/icon-user-2.svg);
 }
 
-/* main */
-main {
-  margin: auto;
-}
-
-/* 배너 css */
 .banner {
   position: relative;
   /* 배너 내 circle 표시 추후 구현 */
-}
 
-.banner a img {
-  max-width: 100%;
+  a img {
+    max-width: 100%;
+  }
 }
 
 .leftBtn,
@@ -160,24 +148,24 @@ article a {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  img {
+    border-radius: 1rem;
+    max-width: 38rem;
+    border: var(--border-color) solid 0.1rem;
+  }
+
+  p:first-of-type {
+    color: var(--font-color);
+  }
+
+  p:last-of-type span {
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 3.005rem;
+  }
 }
 
-article img {
-  border-radius: 1rem;
-  max-width: 38rem;
-  border: var(--border-color) solid 0.1rem;
-}
-
-article p:first-of-type {
-  color: var(--font-color);
-}
-article p:last-of-type span {
-  font-size: 2.4rem;
-  font-weight: 700;
-  line-height: 3.005rem;
-}
-
-/* footer */
 footer {
   font-size: 1.4rem;
   font-family: "SpoqaHanSansNeo-Regular";
@@ -187,37 +175,30 @@ footer {
   flex-direction: column;
   gap: 3rem;
   box-sizing: border-box;
-
   background-color: #f2f2f2;
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+
+    ul {
+      display: flex;
+      gap: 1.4rem;
+      white-space: nowrap;
+
+      li:nth-of-type(3) {
+        font-weight: 700;
+      }
+    }
+  }
 }
 
-footer nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-footer nav ul {
-  display: flex;
-  gap: 1.4rem;
-}
-
-/* 개인정보처리방침 글씨 굵기 조절 */
-footer nav span {
-  font-weight: 700;
-}
-
-.about-wrap {
-  min-width: 65rem;
-}
-
-/* about-wrap 내 사이 가상 요소 추가 */
 .about-wrap li::after {
   content: "|";
   position: relative;
   margin-left: 1.4rem;
 }
 
-/* 마지막(제휴문의)뒤 가상요소 제거*/
 .about-wrap li:last-of-type::after {
   content: "";
 }
@@ -233,9 +214,10 @@ address {
   min-width: 32.1rem;
   color: var(--font-color);
   line-height: 2.4rem;
-}
-address span {
-  font-weight: 700;
+
+  span {
+    font-weight: 700;
+  }
 }
 
 /* 판매자센터 버튼 */
@@ -278,23 +260,23 @@ address span {
   border: none;
   border-radius: 1rem;
   box-shadow: 0 0 0.6rem 0 rgba(0, 0, 0, 25%);
-}
 
-.myPageModal button {
-  width: 11rem;
-  height: 4rem;
-  margin-bottom: 0.8rem;
+  button {
+    width: 11rem;
+    height: 4rem;
+    margin-bottom: 0.8rem;
 
-  border-radius: 0.5rem;
-  border: none;
-  background-color: var(--main-color);
-  color: var(--font-color);
-  cursor: pointer;
-}
+    border-radius: 0.5rem;
+    border: none;
+    background-color: var(--main-color);
+    color: var(--font-color);
+    cursor: pointer;
+  }
 
-.myPageModal button:hover {
-  border: var(--font-color) solid 0.1rem;
-  color: #000;
+  button:hover {
+    border: var(--font-color) solid 0.1rem;
+    color: #000;
+  }
 }
 
 .myPageModal::before {
