--- a/css/goods.css
+++ b/css/goods.css
@@ -8,16 +8,13 @@ body {
   flex-direction: column;
 }
 
-/* header */
 header {
   height: 9rem;
-  padding: 2rem 32rem;
-
+  padding: 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   box-sizing: border-box;
-
   position: sticky;
   top: 0;
   z-index: 100;
@@ -28,34 +25,36 @@ header {
 .search-wrap {
   display: flex;
   gap: 3rem;
+  width: 82.4rem;
 }
 
 h1 img {
   width: 12.4rem;
   height: 3.8rem;
-  /* 로고 위치 조정 */
   transform: translateY(0.7rem);
 }
 
-/* 검색창 버튼 위치 */
 form {
   position: relative;
+  width: 100%;
+  max-width: 40rem;
+  min-width: 10rem;
 }
 
 #search {
-  width: 40rem;
+  font-size: 1.6rem;
+  width: 100%;
   height: 4.6rem;
   border-radius: 5rem;
   border: var(--point-color) 0.2rem solid;
-  /* focus 되었을때 border 미적용 */
   outline: none;
   text-indent: 2.2rem;
-  font-size: 1.6rem;
 }
 
 .searchBtn {
+  padding: 0;
   position: absolute;
-  right: 2.2rem;
+  right: 1.5rem;
   top: 1.1rem;
   border: none;
   background-color: var(--main-color);
@@ -131,11 +130,11 @@ main {
 .buy-wrap {
   display: flex;
   gap: 5rem;
-}
 
-.buy-wrap img {
-  width: 60rem;
-  height: 60rem;
+  img {
+    width: 60rem;
+    height: 60rem;
+  }
 }
 
 .goodsInfo {
@@ -143,10 +142,10 @@ main {
   flex-direction: column;
   gap: 1.6rem;
   margin-bottom: 13.8rem;
-}
 
-.goodsInfo p:first-of-type {
-  color: var(--font-color);
+  p:first-of-type {
+    color: var(--font-color);
+  }
 }
 
 .goodsInfo h3,
@@ -160,26 +159,34 @@ main {
   font-weight: 700;
 }
 
-.goodsInfo-wrap p:first-of-type {
-  font-size: 1.6rem;
-  line-height: 2.003rem;
-  color: var(--font-color);
+.goodsInfo-wrap {
+  p:first-of-type {
+    font-size: 1.6rem;
+    line-height: 2.003rem;
+    color: var(--font-color);
+  }
+
+  input {
+    width: 15rem;
+    height: 5rem;
+    margin: 1rem 0;
+    padding: 0;
+    text-align: center;
+    border: solid 0.1rem var(--border-color);
+    border-radius: 0.5rem;
+  }
+
+  ul {
+    margin-top: 4.6rem;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 hr {
   min-width: 63rem;
   border: 0.2rem solid var(--border-color);
   margin: 2rem 0;
-}
-
-.goodsInfo-wrap input {
-  width: 15rem;
-  height: 5rem;
-  margin: 1rem 0;
-  padding: 0;
-  text-align: center;
-  border: solid 0.1rem var(--border-color);
-  border-radius: 0.5rem;
 }
 
 /* input태그(number type) 기본 버튼 삭제 */
@@ -230,100 +237,99 @@ input:disabled {
 }
 
 /* total 상품 수량, 금액 확인 부분 css */
-.goodsInfo-wrap ul {
-  margin-top: 4.6rem;
-  display: flex;
-  justify-content: space-between;
-}
-
 .priceInfo {
   display: flex;
   gap: 1rem;
-}
 
-.priceInfo p:first-of-type {
-  font-size: 1.8rem;
-  line-height: 2.254rem;
-}
-.priceInfo p:first-of-type span,
-.priceInfo p:last-of-type {
-  color: var(--point-color);
-}
+  p:first-of-type {
+    font-size: 1.8rem;
+    line-height: 2.254rem;
+  }
+  p:first-of-type span,
+  p:last-of-type {
+     {
+      color: var(--point-color);
+    }
+  }
 
-.priceInfo p:first-of-type::after {
-  content: "|";
-  margin-left: 1rem;
-  color: var(--border-color);
-}
+  p:first-of-type::after {
+    content: "|";
+    margin-left: 1rem;
+    color: var(--border-color);
+  }
 
-.priceInfo p:last-of-type {
-  position: relative;
-  top: -1.8rem;
-}
+  p:last-of-type {
+    position: relative;
+    top: -1.8rem;
 
-.priceInfo p:last-of-type span {
-  font-size: 3.6rem;
-  font-weight: 700;
-  line-height: 4.507rem;
+    span {
+      font-size: 3.6rem;
+      font-weight: 700;
+      line-height: 4.507rem;
+    }
+  }
 }
 
 /* 바로구매, 장바구니 버튼 */
 .buyBtns {
   display: flex;
   gap: 1.4rem;
-}
 
-.buyBtns button {
-  height: 6rem;
-  margin-top: 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  color: var(--main-color);
-  cursor: pointer;
+  button {
+    height: 6rem;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    border: none;
+    color: var(--main-color);
+    cursor: pointer;
 
-  font-size: 1.8rem;
-  font-weight: 700;
-  line-height: 2.2rem;
-}
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.2rem;
+  }
 
-.buyBtns button:first-of-type {
-  min-width: 41.6rem;
-  background-color: var(--point-color);
-}
+  button:first-of-type {
+    min-width: 41.6rem;
+    background-color: var(--point-color);
+  }
 
-.buyBtns button:last-of-type {
-  min-width: 20rem;
-  background-color: var(--font-color);
-}
+  button:last-of-type {
+    min-width: 20rem;
+    background-color: var(--font-color);
+  }
 
-/* 판매자는 바로구매, 장바구니 버튼이 disabled  */
-.buyBtns button:first-of-type:disabled,
-.buyBtns button:last-of-type:disabled {
-  background-color: var(--border-color);
-  cursor: not-allowed;
+  /* 판매자는 바로구매, 장바구니 버튼이 disabled  */
+  button:first-of-type:disabled,
+  button:last-of-type:disabled {
+    background-color: var(--border-color);
+    cursor: not-allowed;
+  }
 }
 
 /* 메뉴바 */
-.menubar ul {
-  display: flex;
-}
-.menubar button {
-  width: 32rem;
-  height: 6rem;
+.menubar {
+  ul {
+    display: flex;
+  }
 
-  background-color: var(--main-color);
-  border: none;
-  border-bottom: 0.6rem solid #e0e0e0;
-  cursor: pointer;
+  button {
+    width: 32rem;
+    height: 6rem;
 
-  font-size: 1.8rem;
-  font-weight: 700;
-  line-height: 2.254rem;
-  color: var(--font-color);
-}
+    background-color: var(--main-color);
+    border: none;
+    border-bottom: 0.6rem solid #e0e0e0;
+    cursor: pointer;
 
-.menubar button:focus {
-  border-bottom: 0.6rem solid var(--point-color);
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.254rem;
+    color: var(--font-color);
+  }
+
+  button:focus {
+    border-bottom: 0.6rem solid var(--point-color);
+  }
 }
 
 /* 모달창 */
@@ -338,11 +344,11 @@ input:disabled {
 
   font-size: 1.6rem;
   line-height: 2.003rem;
-}
 
-.loginModal p {
-  width: 20.3rem;
-  margin-bottom: 3rem;
+  p {
+    width: 20.3rem;
+    margin-bottom: 3rem;
+  }
 }
 
 .closeModal {
@@ -352,12 +358,13 @@ input:disabled {
   border: none;
   background: none;
   cursor: pointer;
+
+  img {
+    width: 2.2rem;
+    height: 2.2rem;
+  }
 }
 
-.closeModal img {
-  width: 2.2rem;
-  height: 2.2rem;
-}
 .noBtn,
 .yesBtn {
   font-size: inherit;
@@ -378,7 +385,7 @@ input:disabled {
   color: var(--main-color);
   background-color: var(--point-color);
 }
-/* footer */
+
 footer {
   font-size: 1.4rem;
   font-family: "SpoqaHanSansNeo-Regular";
@@ -388,56 +395,50 @@ footer {
   flex-direction: column;
   gap: 3rem;
   box-sizing: border-box;
-
   background-color: #f2f2f2;
+
+  hr {
+    min-width: 75.5rem;
+    max-width: 128rem;
+    margin: 0;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+
+    ul {
+      display: flex;
+      gap: 1.4rem;
+      white-space: nowrap;
+
+      li:nth-of-type(3) {
+        font-weight: 700;
+      }
+    }
+  }
 }
 
-footer nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-footer nav ul {
-  display: flex;
-  gap: 1.4rem;
-}
-
-/* 개인정보처리방침 글씨 굵기 조절 */
-footer nav span {
-  font-weight: 700;
-}
-
-.about-wrap {
-  min-width: 65rem;
-}
-
-/* about-wrap 내 사이 가상 요소 추가 */
 .about-wrap li::after {
   content: "|";
   position: relative;
   margin-left: 1.4rem;
 }
 
-/* 마지막(제휴문의)뒤 가상요소 제거*/
 .about-wrap li:last-of-type::after {
   content: "";
-}
-
-footer hr {
-  min-width: 75.5rem;
-  max-width: 128rem;
-  /* border: 0.2rem solid var(--border-color); */
-  margin: 0;
 }
 
 address {
   min-width: 32.1rem;
   color: var(--font-color);
   line-height: 2.4rem;
+
+  span {
+    font-weight: 700;
+  }
 }
-address span {
-  font-weight: 700;
-}
+
 /* 판매자센터 버튼 */
 .sellerCenter button {
   width: 16.8rem;
@@ -478,23 +479,23 @@ address span {
   border: none;
   border-radius: 1rem;
   box-shadow: 0 0 0.6rem 0 rgba(0, 0, 0, 25%);
-}
 
-.myPageModal button {
-  width: 11rem;
-  height: 4rem;
-  margin-bottom: 0.8rem;
+  button {
+    width: 11rem;
+    height: 4rem;
+    margin-bottom: 0.8rem;
 
-  border-radius: 0.5rem;
-  border: none;
-  background-color: var(--main-color);
-  color: var(--font-color);
-  cursor: pointer;
-}
+    border-radius: 0.5rem;
+    border: none;
+    background-color: var(--main-color);
+    color: var(--font-color);
+    cursor: pointer;
+  }
 
-.myPageModal button:hover {
-  border: var(--font-color) solid 0.1rem;
-  color: #000;
+  button:hover {
+    border: var(--font-color) solid 0.1rem;
+    color: #000;
+  }
 }
 
 .myPageModal::before {
@@ -509,4 +510,18 @@ address span {
   border-bottom: 0.8rem solid var(--main-color);
 
   filter: drop-shadow(0 -0.2rem 0.2rem rgba(0, 0, 0, 0.1));
+}
+
+@media screen and (max-width: 780px) {
+  .btn-wrap ul {
+    gap: 0rem;
+  }
+  .search-wrap {
+    gap: 1rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  #search::placeholder {
+    color: #fff;
+  }
 }
