--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,10 @@ body {
 
 header {
   height: 9rem;
-  padding: 2rem 32rem;
-  max-width: 192rem;
+  padding: 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   box-sizing: border-box;
   position: sticky;
   top: 0;
@@ -25,6 +24,7 @@ header {
 .search-wrap {
   display: flex;
   gap: 3rem;
+  width: 82.4rem;
 }
 
 h1 img {
@@ -33,14 +33,16 @@ h1 img {
   transform: translateY(0.7rem);
 }
 
-/* 검색창 버튼 위치 */
 form {
   position: relative;
+  width: 100%;
+  max-width: 40rem;
+  min-width: 10rem;
 }
 
 #search {
   font-size: 1.6rem;
-  width: 40rem;
+  width: 100%;
   height: 4.6rem;
   border-radius: 5rem;
   border: var(--point-color) 0.2rem solid;
@@ -49,8 +51,9 @@ form {
 }
 
 .searchBtn {
+  padding: 0;
   position: absolute;
-  right: 2.2rem;
+  right: 1.5rem;
   top: 1.1rem;
   border: none;
   background-color: var(--main-color);
@@ -291,4 +294,18 @@ address {
   border-bottom: 0.8rem solid var(--main-color);
 
   filter: drop-shadow(0 -0.2rem 0.2rem rgba(0, 0, 0, 0.1));
+}
+
+@media screen and (max-width: 780px) {
+  .btn-wrap ul {
+    gap: 0rem;
+  }
+  .search-wrap {
+    gap: 1rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  #search::placeholder {
+    color: #fff;
+  }
 }
