--- a/css/main.css
+++ b/css/main.css
@@ -171,15 +171,16 @@ article a {
 footer {
   font-size: 1.4rem;
   font-family: "SpoqaHanSansNeo-Regular";
-  height: 29.8rem;
-  padding: 6rem 32rem;
+  padding: 6rem 0;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  align-items: center;
   box-sizing: border-box;
   background-color: #f2f2f2;
 
   nav {
+    width: 100%;
+    max-width: 128rem;
     display: flex;
     justify-content: space-between;
 
@@ -206,17 +207,20 @@ footer {
 }
 
 hr {
-  min-width: 75.5rem;
+  width: 99%;
   max-width: 128rem;
   height: 0;
-  margin: 0;
+  margin: 3rem 0;
 }
 
 address {
+  width: 100%;
+  max-width: 128rem;
   min-width: 32.1rem;
   color: var(--font-color);
   line-height: 2.4rem;
-
+  word-break: keep-all;
+  word-wrap: break-word;
   span {
     font-weight: 700;
   }
@@ -301,6 +305,18 @@ address {
   }
   .search-wrap {
     gap: 1rem;
+  }
+
+  footer {
+    nav {
+      flex-wrap: wrap;
+      gap: 2rem;
+
+      ul:first-of-type {
+        display: flex;
+        flex-wrap: wrap;
+      }
+    }
   }
 }
 @media screen and (max-width: 550px) {
