--- a/css/goods.css
+++ b/css/goods.css
@@ -390,7 +390,7 @@ input:disabled {
 footer {
   font-size: 1.4rem;
   font-family: "SpoqaHanSansNeo-Regular";
-  padding: 6rem 0;
+  padding: 6rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
