--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ article a {
 footer {
   font-size: 1.4rem;
   font-family: "SpoqaHanSansNeo-Regular";
-  padding: 6rem 0;
+  padding: 6rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
