💄 메인 상품 이미지 크기 반응형 수정

--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,8 @@ article a {
 
   img {
     border-radius: 1rem;
+    width: 100%;
+    min-width: 30rem;
     max-width: 38rem;
     border: var(--border-color) solid 0.1rem;
   }
