--- a/css/goods.css
+++ b/css/goods.css
@@ -541,4 +541,15 @@ address {
   #search::placeholder {
     color: #fff;
   }
+  .sellerCenter button {
+    width: 100%;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+    gap: 0.2rem;
+    img {
+      width: 2.8rem;
+    }
+  }
 }
