--- a/css/main.css
+++ b/css/main.css
@@ -235,13 +235,11 @@ address {
   height: 5.4rem;
   font-size: 1.8rem;
   line-height: 2.254rem;
-
   border-radius: 0.5rem;
   display: flex;
   gap: 0.8rem;
   justify-content: center;
   align-items: center;
-
   color: var(--main-color);
   border: none;
   background-color: var(--point-color);
@@ -325,5 +323,16 @@ address {
 @media screen and (max-width: 550px) {
   #search::placeholder {
     color: #fff;
+  }
+  .sellerCenter button {
+    width: 100%;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+    gap: 0.2rem;
+    img {
+      width: 2.8rem;
+    }
   }
 }
