🐛 상품 수량 선택 버튼 img 벗어나는 오류 수정

--- a/css/goods.css
+++ b/css/goods.css
@@ -529,7 +529,7 @@ address {
   .buy-wrap {
     flex-direction: column;
     align-items: center;
-    img {
+    img:not(button img) {
       width: 100%;
     }
   }
