🐛 banner 동작 시 leftBtn 사라지는 오류 수정

--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,7 @@ form {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 10;
   border: none;
   background: none;
   cursor: pointer;
