💄 공통 button css 적용

--- a/css/common.css
+++ b/css/common.css
@@ -30,6 +30,12 @@ a {
   color: #000;
 }
 
+button {
+  border: none;
+  background-color: unset;
+  cursor: pointer;
+}
+
 .sr-only {
   position: absolute;
   left: -9999px;
